# observatory-tools

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml
backend/: main.py
backend/db/: database.py  observatory.db
backend/models/: schemas.py
backend/routers/: catalog.py  skydb.py
frontend/: index.html
frontend/css/: main.css
frontend/js/: app.js  astro-utils.js  catalog.js  etc.js  skymonitor.js  snr.js  staralt.js
frontend/templates/: header.html  page-etc.html  page-help.html  page-skymonitor.html  page-snr.html  page-staralt.html
tests/: conftest.py  test_catalog.py  test_health.py  test_skydb.py
